# fastapi-portfolio

./: Procfile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2f1913eedf1a_complete_reset.py
calculator/: README.md  main.py
social-media/: README.md  database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
social-media/routers/: auth.py  post.py  user.py  vote.py
social_media/: config.py  database.py  main.py  models.py
social_media/routers/: post.py
